# lumenza

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md  ~
src/: database.rs  error.rs  filesystem.rs  lib.rs  library.rs  ospl.rs  photo.rs  picture.rs  sql.rs
src/api/: import.rs  library.rs  mod.rs  photo.rs
src/element/: mod.rs  photo.rs  traits.rs
src/systems/: config.rs  database.rs  filesystem.rs  mod.rs  sql.rs
tests/: tests.rs  thumbnails.rs
