[package]
name = "libospl"
version = "0.2.0"
edition = "2021"

[lib]
name = "ospl"
doctest = false


[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
rand = "0.8.5"
infer = "0.15.0"
chrono = "0.4.23"
image = "0.24.7"
imagesize = "0.12"
log = "0.4.17"
walkdir = "2.3"
mime_guess = "2.0"

[dependencies.xxhash-rust]
version = "0.8.6"
features = ["xxh3"]

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]