[package]
name = "lumenza"
version = "0.1.0"
edition = "2021"

[lib]
name = "lumenza"
doctest = false

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
serde = {version = "1.0", features = ["derive"] }
tempdir = "0.3"
walkdir = "2.3"
mime_guess = "2.0"
toml = "0.8.19"
thiserror = "2.0.9"
path-absolutize = "3.1.1"
image = "0.25.5"
